--- a/style.css
+++ b/style.css
@@ -4,13 +4,10 @@ body{
 
 .currentlyPlaying{
     position: relative;
-    background-color: #121212;
-    color: #fff;
     padding: 10px;
     border-radius: 12px;
     display: grid;
     grid-template-columns: 130px 1fr;
-    transition: .2s;
 }
 
 .currentlyPlaying img{
@@ -44,6 +41,17 @@ body{
 }
 
 .name:hover{
+    text-decoration: underline;
+}
+
+.artist a{
+    font-size: 1rem;
+    font-weight: 300;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.artist a:hover{
     text-decoration: underline;
 }
 
