--- a/style.css
+++ b/style.css
@@ -1,13 +1,54 @@
+:root{
+    --color: #fff;
+}
+
 body{
     font-family: CircularSpTitle, CircularSpTitle-Tall, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, Helvetica Neue, helvetica, arial, Hiragino Kaku Gothic Pro, Meiryo, MS Gothic, serif;
+    background-image: url("imgs/background3.png");
+    margin: 937px 0 0 0;
+    background-size: 2000px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#auth-button{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    border-radius: 5px;
+    background-color: #1db954;
+    border: transparent;
+    padding: 15px 50px;
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 400;
+    cursor: pointer;
+    transition: 0.3s;
+    outline: none;
+}
+
+#auth-button:hover{
+    background-color: #1ed760;
+}
+
+#Cplaying{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    transition: 0.3s;
 }
 
 .currentlyPlaying{
     position: relative;
-    padding: 10px;
-    border-radius: 12px;
+    padding: 15px;
     display: grid;
+    color: var(--color);
     grid-template-columns: 130px 1fr;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 3px 8px;
 }
 
 .currentlyPlaying img{
@@ -38,6 +79,7 @@ body{
     font-weight: 400;
     text-decoration: none;
     display: inline-block;
+    color: var(--color);
 }
 
 .name:hover{
@@ -49,6 +91,7 @@ body{
     font-weight: 300;
     text-decoration: none;
     display: inline-block;
+    color: var(--color);
 }
 
 .artist a:hover{
@@ -58,4 +101,24 @@ body{
 .currentlyPlayingInfo h3{
     font-size: 1rem;
     font-weight: 300;
+}
+
+.progress-bar {
+    position: fixed;
+    width: 100%;
+    height: 5px;
+    overflow: hidden;
+    left: 0;
+    top:149px;
+}
+
+.progress-bar-inner {
+    height: 100%;
+    background-color: var(--color);
+    transition: width 0.5s ease;
+    border-radius: 2px;
+}
+
+.progress-bar-inner.progress {
+    width: 0;
 }
